fix ui tag space and container alignment to center

--- a/components/Layout/index.module.css
+++ b/components/Layout/index.module.css
@@ -124,11 +124,11 @@
 
 @media screen and (max-width: 1500px) {
   .container {
-    grid-template-columns: 500px calc(100vw - 517px);
+    /* grid-template-columns: 500px calc(100vw - 517px); */
   }
 
   .containerDark {
-    grid-template-columns: 500px calc(100vw - 517px);
+    /* grid-template-columns: 500px calc(100vw - 517px); */
   }
 
   .headerContainer,
