--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -171,6 +171,7 @@
 
   .secondRow {
     grid-column: 1 / -1;
+    grid-row: 3 / -1;
   }
 
   .switchContainer {
